@@ -20,9 +20,9 @@ following capabilities:
 
 <P>
 
-<LI> <A HREF="http://www.dre.vanderbilt.edu/~schmidt/ACE.html">ACE</A> is an
+<LI><A HREF="http://www.dre.vanderbilt.edu/~schmidt/ACE.html">ACE</A> is an
 open-source framework that provides many components and <A
-HREF="http://www.cs.wustl.edu/~schmidt/POSA">patterns</A> for
+HREF="http://www.dre.vanderbilt.edu/~schmidt/POSA">patterns</A> for
 developing high-performance, distributed real-time and embedded
 systems.  ACE provides powerful, yet efficient abstractions for
 sockets, demultiplexing loops, threads, synchronization primitives.
@@ -30,9 +30,9 @@ sockets, demultiplexing loops, threads, synchronization primitives.
 
 <P>
 
-<LI> <A HREF="http://www.cs.wustl.edu/~schmidt/TAO.html">TAO</A> (The ACE
+<LI><A HREF="http://www.dre.vanderbilt.edu/~schmidt/TAO.html">TAO</A> (The ACE
 ORB) is an open-source implementation of a <A
-href="http://www.cs.wustl.edu/~schmidt/corba.html">CORBA</A> Object
+href="http://www.dre.vanderbilt.edu/~schmidt/corba.html">CORBA</A> Object
 Request Broker (ORB) built using components and patterns in the ACE
 framework.
 
@@ -40,13 +40,13 @@ framework.
 
 <P>
 
-<LI> <A HREF="http://www.cs.wustl.edu/~schmidt/CIAO.html">CIAO</a>
+<LI><A HREF="http://www.dre.vanderbilt.edu/~schmidt/CIAO.html">CIAO</a>
 (Component Integrated ACE ORB) is an open-source implementation of the
 CORBA Component Model (CCM) built on top of TAO. </P>
 </LI>
 
 
-<LI> <A HREF="http://www.cs.wustl.edu/~schmidt/CIAO.html">DAnCE</a>
+<LI><A HREF="http://www.dre.vanderbilt.edu/~schmidt/CIAO.html">DAnCE</a>
 is an open-source implementation of the
 Deployment and Configuration standard (D&C) built on top of TAO. </P>
 </LI>
@@ -59,7 +59,7 @@ mailing lists</A> to stay informed about new releases and
 important updates.<P>
 
 <A
-HREF="http://www.cs.wustl.edu/~schmidt/commercial-support.html">Commercial
+HREF="http://www.dre.vanderbilt.edu/~schmidt/commercial-support.html">Commercial
 support and pre-built versions</A> of ACE, TAO, CIAO, and DAnCE are available
 from a number of companies.  <P>
 
@@ -67,6 +67,8 @@ As community site for CORBA, CCM, and related technologies you can visit <A
 HREF="http://www.orbzone.org">ORBZone</A>.
 <P>
 
+Doxygen documentation for releases of ACE/TAO/CIAO/DAnCE can be browsed <A
+HREF="http://www.dre.vanderbilt.edu/Doxygen/">online</A>.
 <HR>
 
   <H3>Downloading Freely Available Versions of ACE, TAO, CIAO, and DAnCE</H3>
