@@ -17,8 +17,8 @@
 
     <ul>
       <li><P>
-          Follow this <A HREF="http://doxygen.theaceorb.nl">link</A>
-          for documentation of last night's snapshot.
+          Last night's shapshot <A HREF="http://doxygen.theaceorb.nl">documentation </A>
+          provided by <A HREF="http://www.theaceorb.nl">Remedy IT</A>.
         </P>
       </LI>
       <LI><P>
